Don't start move-selection stroke if selection is empty

If selected are is empty, we shouldn't start any stroke, because
it'll be hightly confusing for the user.

We should also show a warning to the user, but we cannot add strings
to krita/4.3

BUG:407160